--- a/index.html
+++ b/index.html
@@ -9,10 +9,27 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="lyrics">
+    <h3 class="gunnalyrics">
+      
+    </h3>
+
+
+
+  </div>
+
+
+
+
+
+
+
+
+
   <div class="dropdown">
     <button onclick="myFunction(); return false;" class="dropbtn">A R T I S T</button>
     <div id="myDropdown" class="dropdown-content">
-      <a id='gunnalink'href="#1">GUNNA</a>
+      <a id='gunnalink'href="#1" onclick="wunna()">GUNNA</a>
       <a id='billielink'href="#2">BILLIE</a>
       <a id='dojalink'href="#3">DOJA CAT</a>
       <a id='nicklelink'href="#4">NICKLEBACK</a>
