--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div class="lyrics">
-    <h3 class="gunnalyrics">
-      
+    <h3>
+      ARTIST
     </h3>
 
 
@@ -30,7 +30,7 @@
     <button onclick="myFunction(); return false;" class="dropbtn">A R T I S T</button>
     <div id="myDropdown" class="dropdown-content">
       <a id='gunnalink'href="#1" onclick="wunna()">GUNNA</a>
-      <a id='billielink'href="#2">BILLIE</a>
+      <a id='billielink'href="#2" onclick="bill()">BILLIE </a>
       <a id='dojalink'href="#3">DOJA CAT</a>
       <a id='nicklelink'href="#4">NICKLEBACK</a>
     </div>
