--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
 <body>
   <div class="lyrics">
     <h3>
-      ARTIST
+      
     </h3>
+    <p id = "test">
+
+    </p>
 
 
 
   </div>
-
-
-
-
-
-
-
 
 
   <div class="dropdown">
@@ -31,10 +27,18 @@
     <div id="myDropdown" class="dropdown-content">
       <a id='gunnalink'href="#1" onclick="wunna()">GUNNA</a>
       <a id='billielink'href="#2" onclick="bill()">BILLIE </a>
-      <a id='dojalink'href="#3">DOJA CAT</a>
-      <a id='nicklelink'href="#4">NICKLEBACK</a>
+      <a id='dojalink'href="#3" onclick="cat()">DOJA CAT</a>
+      <a id='nicklelink'href="#4" onclick="back()">NICKLEBACK</a>
     </div>
   </div>
 
+
+
+
+
+
 </body>
+<footer>
+  
+</footer>
 </html>
