--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="lyrics">
-    <h3>
-      
-    </h3>
-    <p id = "test">
+  <div class="artist">
+    <h2 id="artistname"></h2>
+    <h3 class="lyrics"></h3>
+    <a id="grev" style="display:none"> A magical artist who brings a unique style to rap. With a wild sense of fashion and a crazy assortment of instrumentals, he has quickly became the favorites of many, including myself. He does nothing but soothes the ear of current rap lovers. Just as easy as it is for him to leave your mind with a sense of bouyancy, he is also able to hype you up. The bars aren't much, but he makes it up with all other aspects. Highly recommended for car rides.</a>
+    
 
     </p>
 
