--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a id='billielink'href="#" onclick="bill()">BILLIE </a>
       <a id='dojalink'href="#" onclick="cat()">DOJA CAT</a>
       <a id='nicklelink'href="#" onclick="back()">NICKLEBACK</a>
+    </div>
   </div>
 
   <h2 id="intro">Need suggestions on people to listen to? Wanna get groovy but don't know who can get your body moving? Or do you just want to see who I do or don't listen to? I'm Marquel, and consider yourself lucky. Here you will see all the artist I have listened to and my thoughts of them. If you have any suggestions submit them below, and you'll see their name added within 2 - 30 business days. </h2>
