--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
   
   <div id="default">
     <h2 id="intro">Need suggestions on people to listen to? Wanna get groovy but don't know who can get your body moving? Or do you just want to see who I do or don't listen to? I'm Marquel, and consider yourself lucky. Here you will see all the artist I have listened to and my thoughts of them. If you have any suggestions submit them below, and you'll see their name added within 2 - 30 business days. </h2>
-  
+  <div class = "breif">
+    <h2 id="billie.bio" style="display:none">With a unique singing voice and a funky style, she is becoming an icon for Gen Z. Her wide range of songs are perfect for </h2>
+  </div>
     <div class="dropdown">
       <button onclick="myFunction(); return false;" class="dropbtn">A R T I S T</button>
       <div id="dropdown" class="artists">
-        <a id='gunnalink'href="#" onclick="wunna()">GUNNA</a>
         <a id='billielink'href="#" onclick="bill()">BILLIE </a>
+        <a id='gunnalink'href="#" onclick="wunna()">GUNNA</a>
         <a id='dojalink'href="#" onclick="cat()">DOJA CAT</a>
         <a id='nicklelink'href="#" onclick="back()">NICKLEBACK</a>
+
       </div>
     </div>
   </div>
