--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src="script.js"defer></script>
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <title>Marquel's Music </title> 
-  <h1><span>MARQUEL'S MUSIC CONSIDERATION</span></h1><a href="index.html">HOME</a>
+  <h1><span><blockquote>MARQUEL'S MUSIC CONSIDERATION</blockquote></span></h1>
+  <a href="index.html">HOME</a>
 </head>
 
 <body>
@@ -24,12 +25,10 @@
       </div>
     </div>
 
-  <div id='artistphoto'></div>
-
   <div class="artist">
     <h2 id="artistname"></h2>
   </div>
-  <div class = "breif">
+  <div class = "brief">
     <h2 id ="gunna.bio" style="display: none;"> One of my favorite newer rappers, Gunna has definitely made a name for himself in the game. HIs soft voice over an incredibly produced beat makes his songs so enjoyable. His flow is unique and his fashion is over the top. Gunna is good for most situations, but best fits for car rides. </h2>
 
     <h2 id ="doja.bio" style="display: none;">Doja is hilarious. She always seems to have fun with what she is doing, and I always have fun listening to her. Her songs are lively and makes it hard to sit style listening to her. She definietly should be played anytime you are in your own world at home.</h2>
