--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <script src="script.js"defer></script>
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <title>Marquel's Music </title> 
-  <h1><span><blockquote>MARQUEL'S MUSIC CONSIDERATION</blockquote></span></h1>
-  <a href="index.html">HOME</a>
+  <h1><span>MARQUEL'S MUSIC CONSIDERATION</span></h1>
+  <a id="home" href="index.html">HOME</a>
 </head>
 
 <body>
