I woke up and realized I had to commit again bc I forgot earlier

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js"defer></script>
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+
+  <!--FONT LINKS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Shade&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Shade&family=Rubik:wght@300&display=swap" rel="stylesheet">
+
   <title>Marquel's Music </title> 
   <h1><span>MARQUEL'S MUSIC CONSIDERATION</span></h1>
   <a id="home" href="index.html">HOME</a>
